# dataworks-agent

./: .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  NOTICE-DATAWORKS-AGENT.md  PROJECT_TASKS.md  README.md  UPSTREAM.md  git_good.toml  git_head_version.toml  package.json  pyproject.toml  release-please-config.json  start.bat  tmp_last_response.json  tmp_pr_body.md  upstream-baseline.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.playwright-mcp/: page-2026-07-13T20-12-09-749Z.yml  page-2026-07-13T20-14-06-464Z.yml  page-2026-07-13T20-14-41-477Z.yml  page-2026-07-13T20-16-26-260Z.yml  page-2026-07-13T21-27-51-352Z.yml  page-2026-07-13T21-29-01-050Z.yml  page-2026-07-13T21-48-32-567Z.yml  page-2026-07-13T21-50-26-202Z.yml  page-2026-07-13T21-53-18-318Z.yml  page-2026-07-13T21-55-29-054Z.yml  page-2026-07-13T21-56-32-397Z.yml  page-2026-07-13T21-57-42-886Z.yml  page-2026-07-13T22-15-34-480Z.yml  page-2026-07-13T22-17-02-221Z.yml  page-2026-07-13T22-17-39-727Z.yml  page-2026-07-13T22-18-45-096Z.yml  page-2026-07-13T22-19-34-395Z.yml  page-2026-07-13T22-20-15-889Z.yml  page-2026-07-13T22-28-33-270Z.yml  page-2026-07-13T22-29-07-983Z.yml  page-2026-07-13T22-29-40-382Z.yml  page-2026-07-13T22-30-18-152Z.yml  page-2026-07-13T22-30-55-722Z.yml  page-2026-07-13T22-37-09-489Z.yml  page-2026-07-13T22-38-29-787Z.yml  page-2026-07-13T22-39-01-871Z.yml  page-2026-07-13T22-39-39-241Z.yml  page-2026-07-13T22-40-10-217Z.yml  page-2026-07-13T22-41-07-692Z.yml  page-2026-07-13T22-43-40-509Z.yml  page-2026-07-13T22-43-58-116Z.yml  page-2026-07-13T22-56-31-120Z.yml  page-2026-07-13T22-57-22-392Z.yml  page-2026-07-13T22-57-47-834Z.yml  page-2026-07-13T23-51-12-123Z.yml  page-2026-07-13T23-52-23-422Z.yml  page-2026-07-13T23-53-18-772Z.yml  page-2026-07-13T23-53-48-439Z.yml  page-2026-07-13T23-54-35-625Z.yml  page-2026-07-13T23-55-07-059Z.yml  (+63 more)
dataworks_agent/: __init__.py  bootstrap.py  config.py  main.py  metrics.py  net_util.py  schemas.py  state.py
docs/: langchain_integration_report.md  langchain_integration_summary.md
frontend/: index.html  package-lock.json  package.json  playwright.config.ts  screenshot.py  test_chat.py  test_conversation.py  test_screenshot.py  vite.config.ts  vitest.config.ts
reports/: PLANNING_REVIEW.md  REVIEW.md  junit.xml
scripts/: acceptance.ts  add_any_ods_routing.py  add_extractors.py  add_greeting.py  add_intent.py  add_param_extracts.py  add_partitions_20260702_03.json  add_partitions_20260702_03.sql  add_partitions_progress.json  add_partitions_report.json  add_planner_template.py  add_tmpl2.py  add_to_modeling_actions.py  build_dwd_tables.py  check_actual.py  (+101 more)
sidecars/pyodps/: .gitignore  pyproject.toml
sidecars/pyodps/src/dwa_pyodps/: __init__.py  __main__.py  protocol.py  query.py
sidecars/pyodps/tests/: test_protocol.py
(+645 files in other folders)
