[project]
name = "dataworks-agent"
version = "0.1.1"
description = "智能数仓建模系统 - DataWorks 全流程自动化"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "sqlalchemy>=2.0.0",
    "structlog>=24.0.0",
    "playwright>=1.45.0",
    "python-dotenv>=1.0.0",
    "prometheus-client>=0.20.0",
    "cryptography>=42.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.0.0",
    "websockets>=12.0",
    "sqlglot>=26.31.1",
    "alibabacloud-dataworks-public20240518>=6.2.0",
    "alibabacloud-tea-openapi>=0.3.14",
    "pyodps>=0.12.0",
    "openai>=1.50.0",
    # NOTE: playwright / cryptography / websockets 仅服务于 Cookie/CDP 链路
    # 2026-07 架构澄清：Cookie 链路为 AK/SK 开发权限缺口的长久兜底（非待删除过渡态）
    # 因此这些依赖永久保留，不再计划移除
    "alibabacloud-credentials>=1.0.0",
    "mcp>=1.0.0",
    "langgraph>=1.2.9,<2",
]

[project.scripts]
dw-agent = "dataworks_agent.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.19",
    "pre-commit>=4.0.0",
    "build>=1.2.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
tmp_path_retention_policy = "none"
addopts = [
    "-ra",
    "--strict-markers",
    "--tb=short",
    "--ignore-glob=tests/**/*.txt",
    "--junitxml=reports/junit.xml",
]
junit_family = "xunit2"

[tool.coverage.run]
source = ["dataworks_agent"]
omit = [
    "dataworks_agent/__pycache__/*",
    "dataworks_agent/*/__pycache__/*",
    "dataworks_agent/bootstrap.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "except Exception:",
    "logger\\\\.",
]
show_missing = true
skip_covered = false
precision = 1
